--- a/Hearthscience1.Rmd
+++ b/Hearthscience1.Rmd
@@ -768,7 +768,7 @@ rmse_results = bind_rows(rmse_results,data_frame(method="X: attack, health, char
 rmse_results
 
 ```
-## may delete these parts:
+
 ```{r}
 ## X: attack, health, charge, divine shield, taunt
 ## Y: cost
@@ -805,7 +805,7 @@ rmse_results = bind_rows(rmse_results,data_frame(method="X: attack, health, char
                                      RMSE = model3))
 rmse_results
 ```
-## to here.
+
 ```{r}
 ## X: attack, health, charge, overload
 ## Y: cost
@@ -845,6 +845,34 @@ rmse_results
 
 
 ```{r}
+fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack + Charge + Divine_Shield + Taunt, cumulative(parallel = T, reverse = F), data = minions_text1)
+summary(fitCL)
+
+for(i in 1: 6){
+  assign(paste("coef",i, sep = ""), as.data.frame((coef(fitCL, matrix = T)[,i])))
+}
+final = minions_text %>% mutate(p1 = as.numeric(exp(coef1[1,]+coef1[2,]*health+coef1[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef1[1,]+coef1[2,]*health+coef1[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)))) %>%
+  mutate(p2 = as.numeric(exp(coef2[1,]+coef2[2,]*health+coef2[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef2[1,]+coef2[2,]*health+coef2[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1) %>%
+  mutate(p3 = as.numeric(exp(coef3[1,]+coef3[2,]*health+coef3[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef3[1,]+coef3[2,]*health+coef3[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1 - p2) %>%
+  mutate(p4 = as.numeric(exp(coef4[1,]+coef4[2,]*health+coef4[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef4[1,]+coef4[2,]*health+coef4[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1 - p2 - p3) %>%
+  mutate(p5 = as.numeric(exp(coef5[1,]+coef5[2,]*health+coef5[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef5[1,]+coef5[2,]*health+coef5[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1 - p2 - p3 - p4) %>%
+  mutate(p6 = as.numeric(exp(coef6[1,]+coef6[2,]*health+coef6[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt)/(1+exp(coef6[1,]+coef6[2,]*health+coef6[3,]*attack+coef1[4,]*Charge+coef1[5,]*Divine_Shield+coef1[6,]*Taunt))) - p1 - p2 - p3 - p4 - p5) %>% mutate(p7 = 1 - p1 - p2 - p3 - p4 - p5 - p6) %>% 
+  mutate(value = 7) %>% 
+  group_by(cardId, cost1, attack, health, name, playerClass, mechanics) %>%
+  summarize(value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p1, 1, value),
+              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p2, 2, value),
+              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p3, 3, value),
+              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p4, 4, value),
+              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p5, 5, value),
+              value = ifelse(max(p1,p2,p3,p4,p5,p6,p7) == p6, 6, value))
+
+final %>% filter(value != cost1) %>%
+  mutate(resid = value - cost1) %>%
+  ggplot(aes(resid, group = mechanics, fill = mechanics)) + stat_bin(aes(y = ..count..), bins = 10 , position='dodge') 
+
+```
+
+```{r}
 fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack + Charge + Overload, cumulative(parallel = T, reverse = F), data = minions_text1)
 summary(fitCL)
 
@@ -869,7 +897,7 @@ final = minions_text1 %>% mutate(p1 = as.numeric(exp(coef1[1,]+coef1[2,]*health+
 final %>% filter(value != cost1) %>%
   mutate(resid = value - cost1) %>%
   ggplot(aes(resid, group = mechanics, fill = mechanics)) + stat_bin(aes(y = ..count..), bins = 10 , position='dodge') 
-save(final, file = "final.RData")
+
 ```
 
 ### Simulation
@@ -1201,7 +1229,7 @@ mtscaled<-as.matrix(d1)
 ### triangle heatmap
 
 source("https://raw.githubusercontent.com/briatte/ggcorr/master/ggcorr.R")
-ggcorr(cormat)
+##ggcorr(cormat)
 ggcorr(cormat,hjust = 0.3, size = 1, color = "grey50")
 
 
@@ -1354,7 +1382,7 @@ total.df%>%dplyr::select(ID,cardTotalCounts,Cluster)%>%filter(complete.cases(.))
   ggplot(aes(Cluster,cardTotalCounts))+geom_point()
 
 ```
-From the above plots, we can see that the cards in cluster 3 and 4 are more frequent appear in decks.This helps us to select the core cards of a deck. A core card should neither appear too much, which makes it look like panacea; nor appear too little, which means it has fewer interaction with other cards.
+From the above plots, we can see that the cards in cluster 1 and 4 are more frequent appear in decks.This helps us to select the core cards of a deck. A core card should neither appear too much, which makes it look like panacea; nor appear too little, which means it has fewer interaction with other cards.
 ```{r,warning=F,error=F}
 coreTable<-total.df%>%filter(type=="Minion")%>%dplyr::select(ID,cardTotalCounts,Cluster,cost)%>%filter(complete.cases(.))%>%
   filter(cardTotalCounts<90&cardTotalCounts>60)
@@ -1535,3 +1563,40 @@ defensive %>% ggplot(aes(card,prob)) + geom_line(aes(color=n_core)) +
 
 #######ADD explaination here.
 
+After having a deeper look at each clusters' costs, we can see there are some outliers. 
+
+```{r,warning=F,error=F}
+coreTable%>%filter(Cluster==4)%>%kable()
+coreTable%>%filter(Cluster==1)%>%kable()
+load("D:/HSPH/BIO 260/final/data/final.RData")
+
+coreTable<-coreTable%>%left_join(final,by=c("ID"="name"))
+coreTable<-coreTable%>%select(-cardId)
+coreTable<-coreTable%>%filter(complete.cases(.))%>%
+  mutate(undervalue=value-cost)
+
+zooCore<-coreTable%>%filter(undervalue>0 & Cluster==1)
+
+zooDeckAvailableNumber<-30
+zooDeck<-zooCore%>%select(ID)%>%mutate(count=2)
+
+zooDeckAvailableNumber<-zooDeckAvailableNumber-dim(zooDeck)[1]*2
+
+zooPCA<-zooDeck%>%left_join(total.df)
+center<-colMeans(zooPCA[,3:11])
+
+neighbors<-total.df%>%
+  mutate(distance=sqrt((PCA1-center[1])^2+
+          (PCA2-center[2])^2+(PCA3-center[3])^2+(PCA4-center[4])^2+(PCA5-center[5])^2)+(PCA6-center[6])^2+
+           (PCA7-center[7])^2+(PCA8-center[8])^2+(PCA9-center[9])^2)%>%arrange(distance)%>%
+  filter(!(ID %in% rownames(zooDeck)))
+
+i<-0
+while(zooDeckAvailableNumber>0){
+  i=i+1
+  newCard<-neighbors[i,]%>%mutate(count=ifelse(rarity!="Legendary",2,1))%>%select(ID,count)
+  zooDeck<-rbind(zooDeck,newCard)
+  zooDeckAvailableNumber<-zooDeckAvailableNumber-newCard[,2]
+}
+
+```
